# PicoUSBKeyBridge

./: .gitignore  .gitignore~  .gitmodules  CMakeLists.txt  README.md  TODO.md  go.mod  memory_report.py
client/: main.go
cmake/: pico_sdk_import.cmake
cmd/picousbridged/: main.go
device/: main.go
scripts/: deploy_macos.sh  stop_macos.sh
src/: hid_reports.h  keyemu_log.c  keyemu_log.h  log.c  log.h  main.c  tusb_config.h  tusb_debug.c  usb_descriptors.c
